grammars/tree-sitter-java-faces-frontend/grammar.js
    document: $ => prec(2, seq(
      O($._S),
      O($.prolog),
      field('root', $.element),
      repeat($._Misc),
    )),

    ...c.rules,

    prolog: $ => choice(
      seq($.XMLDecl, repeat($._Misc)),
      seq(O($.XMLDecl), repeat($._Misc), $.doctypedecl, repeat($._Misc)),
      repeat1($._Misc),
    ),

    _Misc: $ => choice(
      $.PI,
      $.StyleSheetPI,
      $.XmlModelPI,
      $.Comment,
      $._S,
    ),

    doctypedecl: $ => seq(
      '<!',
      'DOCTYPE',
      $._S,
      $.Name,
      O(seq($._S, $.ExternalID)),
      O($._S),
      O(seq('[', O(choice($._intSubset, $._S)), ']', O($._S))),
      '>',
    ),

    _intSubset: $ => c.rseq1(O($._S), $._markupdecl, $._DeclSep),

    facelets_element: $ => elementRule($, $.facelets_empty_element, $.facelets_start_tag, $.facelets_end_tag),
    facelets_start_tag: $ => startTagRule($, $._facelets_start_tag_name),
    facelets_end_tag: $ => endTagRule($, $._facelets_end_tag_name),

    jsf_html_element: $ => elementRule($, $.jsf_html_empty_element, $.jsf_html_start_tag, $.jsf_html_end_tag),
    jsf_html_empty_element: $ => emptyElementRule($, $._jsf_html_start_tag_name),
    jsf_html_start_tag: $ => startTagRule($, $._jsf_html_start_tag_name),
    jsf_html_end_tag: $ => endTagRule($, $._jsf_html_end_tag_name),

    jsf_core_element: $ => elementRule($, $.jsf_core_empty_element, $.jsf_core_start_tag, $.jsf_core_end_tag),
    jsf_core_empty_element: $ => emptyElementRule($, $._jsf_core_start_tag_name),
    composite_component_element: $ => elementRule(
      $,
      $.composite_component_empty_element,
      $.composite_component_start_tag,
      $.composite_component_end_tag,
    ),
    composite_component_empty_element: $ => emptyElementRule($, $._composite_start_tag_name),
    composite_component_start_tag: $ => startTagRule($, $._composite_start_tag_name),
    composite_component_end_tag: $ => endTagRule($, $._composite_end_tag_name),

    faces_element: $ => elementRule($, $.faces_empty_element, $.faces_start_tag, $.faces_end_tag),
    faces_empty_element: $ => emptyElementRule($, $._faces_start_tag_name),
    primefaces_element: $ => elementRule(
      $,
      $.primefaces_empty_element,
      $.primefaces_start_tag,
      $.primefaces_end_tag,
    ),
    primefaces_start_tag: $ => startTagRule($, $._primefaces_start_tag_name),
    primefaces_end_tag: $ => endTagRule($, $._primefaces_end_tag_name),

    primefaces_extensions_element: $ => elementRule(
      $,
      $.primefaces_extensions_empty_element,
      $.primefaces_extensions_start_tag,
      $.primefaces_extensions_end_tag,
    ),
    primefaces_extensions_empty_element: $ => emptyElementRule($, $._primefaces_extensions_start_tag_name),
    jstl_element: $ => elementRule($, $.jstl_empty_element, $.jstl_start_tag, $.jstl_end_tag),
    jstl_start_tag: $ => startTagRule($, $._jstl_start_tag_name),
    jstl_end_tag: $ => endTagRule($, $._jstl_end_tag_name),

    qualified_element: $ => elementRule(
      $,
      $.qualified_empty_element,
      $.qualified_start_tag,
      $.qualified_end_tag,
    ),
    qualified_empty_element: $ => emptyElementRule($, $._qualified_start_tag_name),
    qualified_start_tag: $ => startTagRule($, $._qualified_start_tag_name),
    qualified_end_tag: $ => endTagRule($, $._qualified_end_tag_name),

    xml_element: $ => elementRule($, $.xml_empty_element, $.xml_start_tag, $.xml_end_tag),
    xml_empty_element: $ => emptyElementRule($, $._generic_start_tag_name),
    xml_start_tag: $ => startTagRule($, $._generic_start_tag_name),
    xml_end_tag: $ => endTagRule($, $._generic_end_tag_name),

    namespace_declaration: $ => seq(
      field('name', alias($.namespace_declaration_name, $.attribute_name)),
      $._Eq,
      field('uri', $.AttValue),
    ),

    faces_attribute: $ => seq(
      field('name', alias($.faces_attribute_name, $.attribute_name)),
      $._Eq,
      field('value', $.AttValue),
    ),

    passthrough_attribute: $ => seq(
      field('name', alias($.passthrough_attribute_name, $.attribute_name)),
      $._Eq,
      field('value', $.AttValue),
    ),

    plain_attribute: $ => seq(
      field('name', alias($.plain_attribute_name, $.attribute_name)),
      $._Eq,
      field('value', $.AttValue),
    ),

    double_quoted_attribute_value: $ => seq(
      '"',
      field('content', repeat(choice(
        $.double_quoted_attribute_text,
        $.escaped_expression_marker,
        $._Reference,
        $.expression_language,
        '#',
        '$',
        '\\',
      ))),
      '"',
    ),

    double_quoted_attribute_text: _ => /[^<&"\\#$]+/,
    content: $ => repeat1(choice(
      $.CharData,
      $.element,
      $._Reference,
      $.CDSect,
      $.PI,
      $.Comment,
      $.expression_language,
    )),

    expression_language: $ => choice(
      $.deferred_expression,
      $.immediate_expression,
    ),

    deferred_expression: $ => seq(
      '#{',
      elSpace($),
      field('body', $.el_sequence_expression),
      elSpace($),
      '}',
    ),

    el_sequence_expression: $ => prec.left(seq(
      $.el_assignment_expression,
      repeat(seq(elToken($, ';'), $.el_assignment_expression)),
    )),

    el_assignment_expression: $ => choice(
      $.el_lambda_expression,
      prec.right(seq(
        field('left', $.el_conditional_expression),
        elToken($, '='),
        field('right', $.el_assignment_expression),
      )),
      $.el_conditional_expression,
    ),

    el_conditional_expression: $ => choice(
      prec.right(5, seq(
        $.el_or_expression,
        elToken($, '?'),
        field('consequence', $.el_conditional_expression),
        elToken($, ':'),
        field('alternative', $.el_conditional_expression),
      )),
      $.el_or_expression,
    ),

    el_or_expression: $ => prec.left(seq(
      $.el_and_expression,
      repeat(seq(field('operator', elToken($, choice('||', 'or'))), $.el_and_expression)),
    )),

    el_and_expression: $ => prec.left(seq(
      $.el_equality_expression,
      repeat(seq(
        field('operator', elToken($, choice('&&', '&amp;&amp;', 'and'))),
        $.el_equality_expression,
      )),
    )),

    el_equality_expression: $ => prec.left(seq(
      $.el_relational_expression,
      repeat(seq(
        field('operator', elToken($, choice('==', 'eq', '!=', 'ne'))),
        $.el_relational_expression,
      )),
    )),

    el_relational_expression: $ => prec.left(seq(
      $.el_concatenation_expression,
      repeat(seq(
        field('operator', elToken($, choice(
          '<', '&lt;', 'lt',
          '>', '&gt;', 'gt',
          '<=', '&lt;=', 'le',
          '>=', '&gt;=', 'ge',
          'instanceof',
        ))),
        $.el_concatenation_expression,
      )),
    )),

    el_concatenation_expression: $ => prec.left(seq(
      $.el_additive_expression,
      repeat(seq(elToken($, '+='), $.el_additive_expression)),
    )),

    el_additive_expression: $ => prec.left(seq(
      $.el_multiplicative_expression,
      repeat(seq(
        field('operator', elToken($, choice('+', '-'))),
        $.el_multiplicative_expression,
      )),
    )),

    el_multiplicative_expression: $ => prec.left(seq(
      $.el_unary_expression,
      repeat(seq(
        field('operator', elToken($, choice('*', '/', 'div', '%', 'mod'))),
        $.el_unary_expression,
      )),
    )),

    el_unary_expression: $ => choice(
      prec.right(seq(
        field('operator', choice('-', '!', $.el_not_operator, $.el_empty_operator)),
        elSpace($),
        $.el_unary_expression,
      )),
      $.el_value_expression,
    ),

    el_value_expression: $ => seq(
      $._el_primary_expression,
      repeat(choice(
        $.el_property_suffix,
        $.el_bracket_suffix,
        $.el_method_arguments,
      )),
    ),

    _el_primary_expression: $ => choice(
      $.el_boolean,
      $.el_null,
      $.el_floating_point,
      $.el_integer,
      $.el_string,
      $.el_function_call,
      $.el_identifier,
      $.el_parenthesized_expression,
      $.el_map_or_set_literal,
      $.el_list_literal,
    ),

    el_property_suffix: $ => seq(
      elToken($, '.'),
      field('property', $.el_identifier),
    ),

    el_identifier: _ => token(prec(1, /[$A-Z_a-z\u00c0-\u00d6\u00d8-\u00f6\u00f8-\u1fff\u3040-\u318f\u3300-\u337f\u3400-\u3d2d\u4e00-\u9fff\uf900-\ufaff#][$A-Z_a-z0-9\u00c0-\u00d6\u00d8-\u00f6\u00f8-\u1fff\u3040-\u318f\u3300-\u337f\u3400-\u3d2d\u4e00-\u9fff\uf900-\ufaff]*/)),
